tests/positive/rule2_iteration.safe
-- Test: rule2_iteration
-- Description: Array iteration with index provably in bounds.
--   The for loop variable ranges over the array's index subtype,
--   guaranteeing every access is safe.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.2.p131:30aba5f5
-- Expected: ACCEPT

package safe_Iteration

   type slot is range 0 to 15;
   type value is range 0 to 1000;
   type register_Bank is array (slot) of value;

   --  Find_Max: iterates over all slots to find the maximum value.
   --  The loop variable I has type Slot (0..15), matching the
   --  array index bounds exactly.
   function find_Max (bank : register_Bank) returns value
      max_Val : value = bank (0);

      for I in slot
         --  I is of type Slot (0..15), same as array index. In bounds.
         if bank (I) > max_Val
            max_Val = bank (I);


      return max_Val;


   --  Zero_All: sets every element to zero.
   function zero_All (bank : out register_Bank)

      for I in slot
         bank (I) = 0;




